# firdn

./: .gitignore  CMakeLists.txt  README.md  downsample.cpp  firdn.hpp  make_filter.py  test.cpp  testsignal.py
